--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,16 +27,19 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/uimlBuddy.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
+endorsed.classpath=\
+    ${libs.JAXB-ENDORSED.classpath}
 excludes=
 file.reference.controlsfx-8.0.6_20.jar=E:\\Dektop Downloads\\controlsfx-8.0.6_20\\controlsfx-8.0.6_20.jar
+file.reference.jdom-1.1.3.jar=E:\\Dektop Downloads\\jdom-1.1.3\\jdom\\build\\jdom-1.1.3.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.controlsfx-8.0.6_20.jar}
+    ${file.reference.controlsfx-8.0.6_20.jar}:\
+    ${file.reference.jdom-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -94,6 +97,9 @@ javafx.run.height=600
 javafx.run.width=800
 javafx.signing.enabled=true
 javafx.signing.type=self
+jaxbwiz.gensrc.classpath=${libs.jaxb.classpath}
+jaxbwiz.xjcdef.classpath=${libs.jaxb.classpath}
+jaxbwiz.xjcrun.classpath=${libs.jaxb.classpath}
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
