--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,8 +30,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.JAXB-ENDORSED.classpath}
 excludes=
-file.reference.controlsfx-8.0.6_20.jar=E:\\Dektop Downloads\\controlsfx-8.0.6_20\\controlsfx-8.0.6_20.jar
-file.reference.jdom-1.1.3.jar=E:\\Dektop Downloads\\jdom-1.1.3\\jdom\\build\\jdom-1.1.3.jar
+file.reference.controlsfx-8.0.6_20.jar=lib/controlsfx-8.0.6_20.jar
+file.reference.jdom-1.1.3.jar=lib/jdom-1.1.3.jar
+file.reference.saxon9he.jar=lib/saxon9he.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.controlsfx-8.0.6_20.jar}:\
-    ${file.reference.jdom-1.1.3.jar}
+    ${file.reference.jdom-1.1.3.jar}:\
+    ${file.reference.saxon9he.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
