--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -71,11 +71,15 @@ javafx.classpath.extension=\
     ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
     ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
+javafx.deploy.adddesktopshortcut=false
+javafx.deploy.addstartmenushortcut=false
 javafx.deploy.allowoffline=true
 # If true, application update mode is set to 'background', if false, update mode is set to 'eager'
 javafx.deploy.backgroundupdate=false
+javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.installpermanently=false
 javafx.deploy.permissionselevated=true
 # Set true to prevent creation of temporary copy of deployment artifacts before each run (disables concurrent runs)
 javafx.disable.concurrent.runs=false
@@ -97,6 +101,7 @@ javafx.preloader.type=none
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
+javafx.signing.blob=false
 javafx.signing.enabled=true
 javafx.signing.type=self
 jaxbwiz.gensrc.classpath=${libs.jaxb.classpath}
@@ -113,6 +118,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
+native.bundling.enabled=true
 platform.active=JDK_1.8
 run.classpath=\
     ${dist.jar}:\
